@@ -1,7 +1,7 @@
 <?php
 /***************************************************************************
- *   Copyright (C) 2004-2005 by Konstantin V. Arkhipov                     *
- *   voxus@gentoo.org                                                      *
+ *   Copyright (C) 2005 by Konstantin V. Arkhipov                          *
+ *   voxus@shadanakar.org                                                  *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -11,29 +11,8 @@
  ***************************************************************************/
 /* $Id$ */
 
-	/**
-	 * Factory for OSQL's queries.
-	**/
-	final class OSQL extends StaticFactory
+	abstract class StaticFactory
 	{
-		public static function select()
-		{
-			return new SelectQuery();
-		}
-		
-		public static function insert()
-		{
-			return new InsertQuery();
-		}
-		
-		public static function update($table = null)
-		{
-			return new UpdateQuery($table);
-		}
-		
-		public static function delete()
-		{
-			return new DeleteQuery();
-		}
+		final private function __construct() {/*_*/}
 	}
 ?>
